alignment fixes

--- a/src/components/Panels.scss
+++ b/src/components/Panels.scss
@@ -3,3 +3,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
+.panel > * {
+  min-height: 0px;
+  margin: 0px;
+}
